Remove overflow touch to workaround iOS z-index issue.
More details here: https://github.com/scottjehl/Device-Bugs/issues/14

--- a/wdn/templates_4.0/less/layouts/idm.less
+++ b/wdn/templates_4.0/less/layouts/idm.less
@@ -8,7 +8,7 @@
         position: absolute;
         bottom: -33px; // position over the nav bar
         right: 0;
-        z-index: 10; // overlay the nav bar
+        z-index: 1; // overlay the nav bar
 
         a {
             color: #e7b5b5;
