--- a/wdn/templates_4.0/less/layouts/wrapper.less
+++ b/wdn/templates_4.0/less/layouts/wrapper.less
@@ -1,6 +1,5 @@
 #wdn_wrapper {
     overflow: hidden;
-    -webkit-overflow-scrolling: touch;
 }
 .wdn-input-driver {
     display: none;
